apps/speaches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speaches
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: speaches
  ports:
    - port: 8000
      targetPort: 8000
      name: http
