apps/speaches/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speaches
  namespace: nori-cloud
  labels:
    app: speaches
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speaches.norriswu.me`)
      kind: Rule
      services:
        - name: speaches
          port: 8000
